# arxiv-agent

./: .env.example  README.md  pyproject.toml  run.py
prompts/: analyzer.txt  filter.txt  scorer.txt
src/arxiv_agent/: __init__.py  config.py  llm.py  models.py  workflow.py
src/arxiv_agent/agents/: __init__.py  analyzer_agent.py  filter_agent.py  scorer_agent.py
src/arxiv_agent/tools/: __init__.py  arxiv_client.py  notification.py  paper_downloader.py  web_search.py
